@@ -4,6 +4,8 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.6-10 (openen Jan 20, 2009)
 
+	* ordirgl: fixed wrong warnings in ordirgl(..., type="t"). 
+
 	* kendall.post, kendall.global: knows now all P value adjustment
 	methods of 'p.adjust()' plus "sidak".
 	
